Agregué un h5 al index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         durante una hora y media... etc</p>
             <h2>Ejercicios</h2>
                 <h3>Caminatas</h3>
-                <h3>Deportes</h3>
+                <h4>Deportes</h4>
+                <h5>Andar en rollers</h5>
               
     <footer>
         <div>
